fix width issue and text overflow of scoreboard

--- a/src/components/scoreboardGuessSong/ScoreboardGuessSong.css
+++ b/src/components/scoreboardGuessSong/ScoreboardGuessSong.css
@@ -4,6 +4,18 @@
     justify-content: center;
     padding-top: 80px;
     background-color: #4cada5;
+    position: fixed;
+    overflow: hidden;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.ScoreboardGuessSong-wrapper
+{
+    overflow-y: auto;
+    height: 95%;
+    padding-right: 16px;
 }
 
 .ScoreboardGuessSong-guessTheSong
@@ -72,6 +84,7 @@
 .ScoreboardGuessSong-scoreInfo--master.open
 {
     max-height: 62px;
+    height: 62px;
     overflow: hidden;
     transition: ease max-height 2s;
 }
@@ -111,4 +124,7 @@
 .ScoreboardGuessSong-scoreInfo--averageScore
 {
     margin-left: 8px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
