--- a/src/components/scoreboardNextLine/ScoreboardNextLine.css
+++ b/src/components/scoreboardNextLine/ScoreboardNextLine.css
@@ -4,6 +4,18 @@
     justify-content: center;
     padding-top: 80px;
     background-color: #6c7204;
+    position: fixed;
+    overflow: hidden;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.ScoreboardNextLine-wrapper
+{
+    overflow-y: auto;
+    height: 95%;
+    padding-right: 16px;
 }
 
 .ScoreboardNextLine-guessTheSong
@@ -72,6 +84,7 @@
 .ScoreboardNextLine-scoreInfo--master.open
 {
     max-height: 62px;
+    height: 62px;
     overflow: hidden;
     transition: ease max-height 2s;
 }
@@ -113,4 +126,7 @@
     margin-left: 8px;
     color: white;
     font-weight: bold;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
